added link to form site

--- a/nschl002/src/main/resources/templates/angebote/liste.html
+++ b/nschl002/src/main/resources/templates/angebote/liste.html
@@ -28,6 +28,9 @@ xmlns:th="http://www.thymeleaf.org" lang="de">
     <div th:if="${#lists.size(angebote)} <= 0">
         Keine aktuellen Angebote!
     </div>
+    <div>
+        <a th:href="@{/angebot/neu}">Neuen Braten anbieten</a>
+    </div>
     
     
 </body>
