--- a/nschl002/src/main/resources/templates/angebote/bearbeiten.html
+++ b/nschl002/src/main/resources/templates/angebote/bearbeiten.html
@@ -9,18 +9,18 @@ xmlns:th="http://www.thymeleaf.org" lang="de">
 
     <h1>Braten erfassen und bearbeiten</h1>
 
-    <form>
+    <form th:method="POST" th:object="${angebotform}" th:action="@{/angebot}">
         <label for="name">Anbieter</label><br>
-        <input type="text" name="name" id ="name"><br>
+        <input type="text" name="name" id ="name" th:field="*{name}"><br>
         <br>
         <label for="abholort">Abholort</label><br>
-        <input type="text" name="abholort" id="abholort"><br>
+        <input type="text" name="abholort" id="abholort" th:field="*{abholort}"><br>
         <br>
         <label for="beschreibung">Beschreibung</label><br>
-        <input type="text" name="beschreibung" id="beschreibung"><br>
+        <input type="text" name="beschreibung" id="beschreibung" th:field="*{beschreibung}"><br>
         <br>
         <label for="haltbarbis">Haltbar bis</label><br>
-        <input type="date" name="haltbarbis" id="haltbarbis"><br>
+        <input type="date" name="haltbarbis" id="haltbarbis" th:field="*{haltbarbis}"><br>
         <br><br>
         <button type="submit">Daten absenden</button>
     </form>
