Added edit and delete feature

--- a/nschl002/src/main/resources/templates/angebote/liste.html
+++ b/nschl002/src/main/resources/templates/angebote/liste.html
@@ -16,12 +16,16 @@ xmlns:th="http://www.thymeleaf.org" lang="de">
                 <th>Anbieter</th>
                 <th>Abholort</th>
                 <th>Beschreibung</th>
+                <th>löschen</th>
+                <th>bearbeiten</th>
             </tr>
-            <tr th:each="a: ${angebote}">
+            <tr th:each="a, status: ${angebote}">
                 <td th:text="${a.haltbarbis}">Haltbar bis</td>
                 <td th:text="${a.name}">Anbieter</td>
                 <td th:text="${a.abholort}">Abholort</td>
                 <td th:text="${a.beschreibung}">Beschreibung</td>
+                <td><a th:href="@{'/angebot/'+ ${status.index}+'/del'}">[del]</a></td>
+                <td><a th:href="@{'/angebot/'+ ${status.index}}">[edit]</a></td>
             </tr>
         </table>
     </div>
