--- a/nschl002/src/main/resources/templates/angebote/bearbeiten.html
+++ b/nschl002/src/main/resources/templates/angebote/bearbeiten.html
@@ -1,26 +1,32 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-xmlns:th="http://www.thymeleaf.org" lang="de">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Neuen Braten erfassen</title>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" lang="de">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="style.css">
+
+<title>Neuen Braten erfassen</title>
 </head>
+
 <body>
 
     <h1>Braten erfassen und bearbeiten</h1>
 
     <form th:method="POST" th:object="${angebotform}" th:action="@{/angebot}">
         <label for="name">Anbieter</label><br>
-        <input type="text" name="name" id ="name" th:field="*{name}"><br>
+        <input type="text" name="name" id="name" th:field="*{name}" th:errorclass="error">
+        <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Muss zwischen 3 und 80 liegen</span><br>
         <br>
         <label for="abholort">Abholort</label><br>
-        <input type="text" name="abholort" id="abholort" th:field="*{abholort}"><br>
+        <input type="text" name="abholort" id="abholort" th:field="*{abholort}" th:errorclass="error">
+        <span th:if="${#fields.hasErrors('abholort')}" th:errors="*{abholort}">Bitte einen Ort eingeben</span><br>
         <br>
         <label for="beschreibung">Beschreibung</label><br>
-        <input type="text" name="beschreibung" id="beschreibung" th:field="*{beschreibung}"><br>
+        <input type="text" name="beschreibung" id="beschreibung" th:field="*{beschreibung}" th:errorclass="error">
+        <span th:if="${#fields.hasErrors('beschreibung')}" th:errors="*{beschreibung}">Bitte aussagekräftige Beschreibung eingeben</span><br>
         <br>
         <label for="haltbarbis">Haltbar bis</label><br>
-        <input type="date" name="haltbarbis" id="haltbarbis" th:field="*{haltbarbis}"><br>
+        <input type="date" name="haltbarbis" id="haltbarbis" th:field="*{haltbarbis}" th:errorclass="error">
+        <span th:if="${#fields.hasErrors('haltbarbis')}" th:errors="*{haltbarbis}">Der ist ja schon abgelaufen...</span><br>
         <br><br>
         <button type="submit">Daten absenden</button>
     </form>
