--- a/nschl002/src/main/resources/templates/angebote/bearbeiten.html
+++ b/nschl002/src/main/resources/templates/angebote/bearbeiten.html
@@ -27,6 +27,13 @@
         <label for="haltbarbis">Haltbar bis</label><br>
         <input type="date" name="haltbarbis" id="haltbarbis" th:field="*{haltbarbis}" th:errorclass="error">
         <span th:if="${#fields.hasErrors('haltbarbis')}" th:errors="*{haltbarbis}"></span><br>
+        <br>
+        <label for="vgrad">Vegetarizität</label>
+        <select id="vgrad" th:field="*{vgrad}">
+            <option th:each="v: *{vegWerte}"
+                    th:value="${v}"
+                    th:text="${v} + '%'"/>
+        </select>
         <br><br>
         <button type="submit">Daten absenden</button>
     </form>
