added forgotten header for vegetarian feature and removed unused import

--- a/nschl002/src/main/resources/templates/angebote/liste.html
+++ b/nschl002/src/main/resources/templates/angebote/liste.html
@@ -16,6 +16,7 @@ xmlns:th="http://www.thymeleaf.org" lang="de">
                 <th>Anbieter</th>
                 <th>Abholort</th>
                 <th>Beschreibung</th>
+                <th>Vegetarizität</th>
                 <th>löschen</th>
                 <th>bearbeiten</th>
             </tr>
