made login controller useful for new db system and old session system

--- a/src/main/resources/templates/braten/bearbeiten.html
+++ b/src/main/resources/templates/braten/bearbeiten.html
@@ -11,7 +11,7 @@
 
     <h1 th:text="#{edit.title}">Edit roast</h1>
 
-    <form th:method="POST" th:object="${angebotform}" th:action="@{/braten/angebot}">
+    <form th:method="POST" th:object="${angebotform}" th:action="@{/braten/angebot/neu}">
         <input type="hidden" th:field="*{id}">
         <input type="hidden" th:field="*{version}">
 
